--- a/app/views/items/_my_items.html.erb
+++ b/app/views/items/_my_items.html.erb
@@ -5,7 +5,7 @@
       <li class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <div class="thumbnail">
           <div class="thumbnail-image-div">
-            <img src= <%= S3_PATH + item.image_url %> alt="">
+            <img src= <%= S3_PATH + item.image_url %> class="center-block" alt="">
           </div>
         </div>
       </li>
